merge for sdfs